---------------------------------------------------------------------------------------------------
Version: 0.0.26
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.0.25
Date: 02SEP2023
  Changes:
    - added extra protection against invalid target entities
    - added preliminary support for LuaUnitGroup targets
    - updated code annotations
---------------------------------------------------------------------------------------------------
Version: 0.0.24
Date: 05JUN2023
  Changes:
    - fixed that trainsaver could get stuck waiting for the target to start moving when targetting an idle train on startup
    - driving_until_tick, wait_signal_until_tick, and wait_station_until_tick are now set on trainsaver startup as appropriate depending on train state
    - added verbose mode update messages when new target request is denied by an active rocket launch
    - added tick data to the wait_signal_until_tick and wait_station_until_tick verbose mode update messages
---------------------------------------------------------------------------------------------------
Version: 0.0.23
Date: 30MAY2023
  Changes:
    - non-train targets now also use the driving and station minimum mod settings for their equivalent states
    - fixed that rocket launches could interrupt active spidertron targets
    - limited new spidertron target requests to only spidertrons with more than 100 tiles remaining in their path
    - simplified current trainsaver target state and condition handling
    - added additional clarity to target names in verbose mode
    - updated zoom mod setting description to reflect the new default value from version 0.0.21
    - updated liscense copyright year
---------------------------------------------------------------------------------------------------
Version: 0.0.22
Date: 27MAY2023
  Changes:
    - resolved error when loaded with factorio version 1.1.81 or older